--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,14 @@
 @import "tailwindcss";
 
 html {
-  font-size: 12px;
+  font-size: 11px;
   min-height: 100%;
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 8px;
+  }
 }
 
 body * {
